--- a/src/app/modules/newsfeed/newsfeed.component.html
+++ b/src/app/modules/newsfeed/newsfeed.component.html
@@ -28,6 +28,7 @@
   >
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
+        <m-onboardingProgressWidget></m-onboardingProgressWidget>
         <m-language__sidebarPrompt></m-language__sidebarPrompt>
         <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
 
