Various fixes and removal of local store system

--- a/src/app/modules/onboarding-v3/widget/onboarding-widget.component.html
+++ b/src/app/modules/onboarding-v3/widget/onboarding-widget.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!(completed$ | async) && !(loading$ | async) && !hidden">
+<ng-container *ngIf="!(completed$ | async) && !(loading$ | async)">
   <div
     class="m-onboardingWidget__container"
     *mIfFeature="'onboarding-october-2020'"
