--- a/src/app/modules/onboarding-v3/panel/tags/tags.component.ng.scss
+++ b/src/app/modules/onboarding-v3/panel/tags/tags.component.ng.scss
@@ -9,6 +9,7 @@
 
   @media screen and (max-width: 725px) {
     min-width: unset;
+    padding: 40px;
   }
 
   .m-onboardingTags__header {
@@ -33,7 +34,7 @@
       font-size: 18px;
       font-weight: 500;
       cursor: pointer;
-      padding: 8px 16px;
+      padding: 10px 20px;
       margin: 10px 20px 0 0;
 
       @include m-theme() {
