Various fixes and changes for onboarding v3 including progress seperation

--- a/src/app/modules/homepage-v2/homepage-v2.component.html
+++ b/src/app/modules/homepage-v2/homepage-v2.component.html
@@ -50,6 +50,8 @@
             (click)="register()"
             i18n="@@HOMEPAGE_V2__JOIN_MINDS_NOW"
             data-cy="data-minds-homepage-join-button-main"
+            color="blue"
+            size="large"
           >
             Join Minds Now
           </m-button>
@@ -283,6 +285,8 @@
                 class="m-homepage__joinButton--blueOutline"
                 (click)="register()"
                 i18n="@@HOMEPAGE_V2__JOIN_MINDS_NOW"
+                color="blue"
+                pulsating="true"
               >
                 Join Minds Now
               </m-button>
