Show tags settings on all discovery pages #4038

--- a/src/app/modules/discovery/boost/boost-feed.component.html
+++ b/src/app/modules/discovery/boost/boost-feed.component.html
@@ -1,4 +1,4 @@
-<m-discovery__tabs [showSettingsButton]="false"></m-discovery__tabs>
+<m-discovery__tabs></m-discovery__tabs>
 
 <m-discovery__feedItem
   *ngFor="let entity$ of feed$ | async"
