--- a/src/app/modules/discovery/tabs/tabs.component.html
+++ b/src/app/modules/discovery/tabs/tabs.component.html
@@ -37,8 +37,5 @@
     >
   </div>
   <div class="m-layout__spacer"></div>
-  <m-discovery__settingsButton
-    *ngIf="showSettingsButton"
-    modalType="tags"
-  ></m-discovery__settingsButton>
+  <m-discovery__settingsButton modalType="tags"></m-discovery__settingsButton>
 </div>
