(chore): change buy tokens to buy crypto

--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -206,14 +206,14 @@
             [useParentPosition]="true"
           >
             <i class="material-icons" m-tooltip--anchor>shopping_cart</i>
-            <ng-container i18n="@@COMMON__BUY_TOKENS">Buy tokens</ng-container>
+            <ng-container i18n="@@COMMON__BUY_CRYPTO">Buy Crypto</ng-container>
           </m-tooltip>
 
           <span
             class="m-sidebarNavigationItem__text"
-            i18n="@@COMMON__BUY_TOKENS"
+            i18n="@@COMMON__BUY_CRYPTO"
           >
-            Buy tokens
+            Buy Crypto
           </span>
         </a>
       </li>
