--- a/src/app/modules/forms/login/login.html
+++ b/src/app/modules/forms/login/login.html
@@ -195,23 +195,22 @@
 <!-- END: LOGIN -->
 
 <!-- START: TWOFACTOR -->
-<div class="minds-login-box m-login-box m-login__2fa" *ngIf="twofactorToken">
-  <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text" i18n="@@FORMS__LOGIN__2FA_LOGIN_TITLE">
+<div class="minds-login-box m-login-box m-login-2fa" *ngIf="twofactorToken">
+  <div>
+    <h2 class="m-login-2fa__title" i18n="@@FORMS__LOGIN__2FA_LOGIN_TITLE">
       Twofactor Login
     </h2>
   </div>
 
-  <div class="mdl-card__supporting-text">
+  <span class="m-login-2fa__subtitle">
     <ng-container i18n="@@FORMS__LOGIN__2FA_LOGIN_SMS_SENT">
       We just sent you a text. Enter the code below to authenticate.
     </ng-container>
-  </div>
+  </span>
 
   <div class="m-login-mfa-input">
     <input
       #code
-      class="mdl-textfield__input"
       type="text"
       id="code"
       placeholder="Enter your code here"
