--- a/src/app/modules/forms/login/login.ng.scss
+++ b/src/app/modules/forms/login/login.ng.scss
@@ -46,6 +46,52 @@
   a {
     font-weight: 400;
   }
+
+  .m-login-2fa {
+    padding: 0;
+
+    .m-login-2fa__title {
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
+      font-weight: bold;
+      -webkit-font-smoothing: antialiased;
+      text-rendering: optimizeLegibility;
+      font-size: 18pt;
+      margin: 8px 0 16px 0;
+    }
+
+    .m-login-2fa__subtitle {
+      -webkit-font-smoothing: antialiased;
+      text-rendering: optimizeLegibility;
+
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
+      }
+    }
+
+    .m-login-mfa-input {
+      padding: 20px 0;
+
+      input {
+        width: 100%;
+        height: 40px;
+        border-radius: 4px;
+        padding: 16px;
+        outline: none !important;
+
+        @include m-theme() {
+          border: 1px solid themed($m-borderColor--primary);
+        }
+
+        &:focus {
+          @include m-theme() {
+            border: 1px solid themed($m-blue);
+          }
+        }
+      }
+    }
+  }
 }
 
 // .m-login-box {
@@ -67,7 +113,3 @@
 //     text-decoration: none;
 //   }
 // }
-
-.m-login-mfa-input {
-  padding: 20px 0;
-}
