Hotfixing topbar not working properly in darkmode

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -32,7 +32,7 @@
             class="m-v3Topbar__logo--bulb"
           />
           <img
-            *ngIf="!isDarkTheme$ | async"
+            *ngIf="!(isDarkTheme$ | async)"
             [src]="cdnAssetsUrl + 'assets/logos/logo-light-mode.svg'"
             class="m-v3Topbar__logo--full"
           />
