(fix): prevent async race condition on search auto scroll (and use new buttons) - closes engine#1800

--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -53,7 +53,7 @@
 
   <div class="m-discoveryFeeds__feed">
     <m-discovery__feedItem
-      *ngFor="let entity$ of entities$ | async"
+      *ngFor="let entity$ of entities"
       [entity]="entity$ | async"
     ></m-discovery__feedItem>
     <infinite-scroll
