--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -10,12 +10,12 @@
       <m-feedFilter
         class="m-channelFeed__filter"
         [options]="['type']"
-        [type]="feed.type$ | async"
+        [type]="feedService.type$ | async"
         (typeChange)="onTypeChange($event)"
       >
         <ng-container *ngIf="service.isOwner$ && !isGrid">
           <a
-            *ngIf="feed.scheduledCount$ | async as scheduledCount"
+            *ngIf="feedService.scheduledCount$ | async as scheduledCount"
             class="m-channelFeedFilter__scheduled"
             [routerLink]="['/', service.username$ | async, 'scheduled']"
           >
@@ -36,9 +36,9 @@
     <div class="m-channelFeed__grid" *ngIf="isGrid">
       <m-feedGrid
         [maxColumns]="3"
-        [entities]="feed.service.feed | async"
+        [entities]="feed"
         [isProSite]="false"
-        (deleted)="feed.onDelete($event)"
+        (deleted)="feedService.onDelete($event)"
       >
       </m-feedGrid>
     </div>
@@ -47,14 +47,14 @@
     <!-- LAYOUT : LIST  -->
     <!-- ----------------------------------------- -->
     <div class="m-channelFeed__list" *ngIf="!isGrid">
-      <ng-container *ngIf="(feed.service.feed | async)?.length > 0">
+      <ng-container *ngIf="feed?.length > 0">
         <m-composer *ngIf="service.isOwner$ | async"></m-composer>
         <div class="m-channelFeedList__entities">
           <m-newsfeed__entity
-            *ngFor="let entity of feed.service.feed | async; let i = index"
+            *ngFor="let entity of feed; let i = index"
             [entity]="entity | async"
             [slot]="i + 1"
-            (deleted)="feed.onDelete($event)"
+            (deleted)="feedService.onDelete($event)"
           ></m-newsfeed__entity>
         </div>
       </ng-container>
@@ -70,8 +70,8 @@
     <!-- ----------------------------------------- -->
     <div
       *ngIf="
-        !(feed.service.inProgress | async) &&
-        (feed.service.feed | async)?.length < 1 &&
+        !(feedService.service.inProgress | async) &&
+        (feedService.service.feed | async)?.length < 1 &&
         !isOwnedChannel
       "
       class="m-channelFeed__emptyFeedContainer"
@@ -81,7 +81,7 @@
         i18n="@@M__CHANNEL_FEED__NO_CONTENT"
         >No content</span
       >
-      <ng-container [ngSwitch]="feed.type$ | async">
+      <ng-container [ngSwitch]="feedService.type$ | async">
         <span
           *ngSwitchCase="'images'"
           class="m-channelFeed__emptyFeedSubtitle"
@@ -118,14 +118,14 @@
 
     <div
       *ngIf="
-        !(feed.service.inProgress | async) &&
-        (feed.service.feed | async) &&
-        (feed.service.feed | async).length < 1 &&
+        !(feedService.service.inProgress | async) &&
+        feed &&
+        feed?.length < 1 &&
         isOwnedChannel
       "
       class="m-channelFeed__emptyFeedContainer m-channelFeed__emptyFeedContainer--bordered"
     >
-      <ng-container [ngSwitch]="feed.type$ | async">
+      <ng-container [ngSwitch]="feedService.type$ | async">
         <span
           *ngSwitchCase="'images'"
           class="m-channelFeed__emptyFeedTitle"
@@ -175,9 +175,9 @@
   <ng-template #infiniteScroll>
     <infinite-scroll
       distance="25%"
-      (load)="feed.loadNext()"
-      [moreData]="feed.service.hasMore | async"
-      [inProgress]="feed.service.inProgress | async"
+      (load)="feedService.loadNext()"
+      [moreData]="feedService.service.hasMore | async"
+      [inProgress]="feedService.service.inProgress | async"
     ></infinite-scroll
   ></ng-template>
   <!-- ----------------------------------------- -->
