--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -51,7 +51,7 @@
         >
       </div>
       <div class="m-form__row--input">
-        <m-popover (change)="onPopoverChange($event)" #popover>
+        <m-validationPopover (change)="onPopoverChange($event)" #popover>
           <input
             type="password"
             id="newPassword"
@@ -63,7 +63,7 @@
             (focus)="onNewPasswordFocus()"
             (blur)="onNewPasswordBlur()"
           />
-        </m-popover>
+        </m-validationPopover>
       </div>
     </div>
     <div class="m-form__field--text stretchedField hasValidationRow">
