--- a/src/app/modules/settings-v2/settings-v2.component.scss
+++ b/src/app/modules/settings-v2/settings-v2.component.scss
@@ -185,9 +185,9 @@ m-settingsV2 {
       }
     }
 
-    .m-formWrapper m-popover {
+    .m-formWrapper m-validationPopover {
       width: 100%;
-      .m-popover__content {
+      .m-validationPopover__content {
         margin-top: 1.5rem;
       }
       input {
