newsfeed single sidebar #3813

--- a/src/app/modules/discovery/tags/settings.component.html
+++ b/src/app/modules/discovery/tags/settings.component.html
@@ -71,6 +71,7 @@
     <div class="m-layout__spacer"></div>
 
     <m-button
+      color="blue"
       [saving]="saving$ | async"
       (onAction)="onSave($event)"
       data-cy="discovery-settings-save-button"
