--- a/src/app/modules/discovery/tags/sidebar-tags.component.ng.scss
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.ng.scss
@@ -27,4 +27,10 @@
       }
     }
   }
+
+  ::ng-deep m-loadingSpinner {
+    @media screen and (max-width: $max-mobile) {
+      display: none;
+    }
+  }
 }
