--- a/src/app/modules/media/youtube-migration/connect/connect.component.html
+++ b/src/app/modules/media/youtube-migration/connect/connect.component.html
@@ -57,7 +57,7 @@
       be placed in the description.
     </p>
 
-    <m-button [saving]="inProgress" (onAction)="connect()">
+    <m-button [saving]="inProgress" (onAction)="connect()" color="blue">
       Connect to your YouTube
     </m-button>
   </div>
