(front) Discovery Memberships Feed #3370

--- a/src/app/modules/discovery/tabs/tabs.component.html
+++ b/src/app/modules/discovery/tabs/tabs.component.html
@@ -29,6 +29,15 @@
   </div>
   <div class="m-tabs__tab">
     <a
+      routerLink="/discovery/memberships/feed"
+      routerLinkActive="m-tabs__tab--selected"
+      data-cy="discovery-tab-link-memberships"
+      i18n="@@DISCOVERY_TAGS__MEMBERSHIPS"
+      >Memberships</a
+    >
+  </div>
+  <div class="m-tabs__tab">
+    <a
       routerLink="/discovery/boost/feed"
       routerLinkActive="m-tabs__tab--selected"
       data-cy="discovery-tab-link-boosted"
