(fix): quick hack to stop videos overflowing when in placeholder mode - closes #4159

--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -103,6 +103,7 @@
         !(service.shouldShowPaywall$ | async)
       "
       [style.height]="videoHeight"
+      [style.overflow]="videoHeight ? 'hidden' : null"
     ></m-videoPlayer--scrollaware>
 
     <div class="m-activityContent__fixedHeightSpacer"></div>
