--- a/src/app/modules/groups/profile/review/review.component.html
+++ b/src/app/modules/groups/profile/review/review.component.html
@@ -1,26 +1,17 @@
 <ng-container *ngIf="group">
   <div class="minds-list">
     <div>
-      <minds-activity
+      <div
+        class="m-groupReview__item"
         *ngFor="let entity of entities; let i = index"
-        class="mdl-card item"
-        [object]="entity"
-        [canDelete]="group['is:owner'] || group['is:moderator']"
-        (deleted)="delete(entity)"
-        [hideTabs]="true"
-        [attr.data-minds-activity-guid]="entity.guid"
       >
-        <!-- Menu Actions -->
-
-        <li
-          post-menu
-          class="mdl-menu__item"
-          *ngIf="group['is:owner']"
-          (click)="removePrompt(entity?.ownerObj)"
-          i18n="@@GROUPS__PROFILE__FEED__REMOVE_USER"
+        <m-activity
+          [entity]="entity"
+          [canDelete]="group['is:owner'] || group['is:moderator']"
+          (deleted)="delete(entity)"
+          [attr.data-minds-activity-guid]="entity.guid"
         >
-          Remove user
-        </li>
+        </m-activity>
 
         <!-- Review -->
 
@@ -43,7 +34,7 @@
         </div>
 
         <!-- / -->
-      </minds-activity>
+      </div>
 
       <infinite-scroll
         distance="25%"
