guest mode setup

--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -33,7 +33,9 @@
 <m-overlay-modal></m-overlay-modal>
 <m-stackableModal></m-stackableModal>
 
-<m--blockchain--transaction-overlay></m--blockchain--transaction-overlay>
+<m--blockchain--transaction-overlay
+  *mIfFeature="'!guest-mode'"
+></m--blockchain--transaction-overlay>
 
 <m-modal--tos-updated *ngIf="session.isLoggedIn()"></m-modal--tos-updated>
 
