(fix): toolbar missing from boost console posts - closes #4234

--- a/src/app/modules/boost/console/booster/booster.component.html
+++ b/src/app/modules/boost/console/booster/booster.component.html
@@ -13,7 +13,7 @@
           <minds-card
             [object]="entity | async"
             class="m-border"
-            class="mdl-card"
+            [flags]="{ hideTabs: false }"
           ></minds-card>
         </ng-container>
       </div>
