--- a/src/app/modules/settings-v2/account/boosted-content/boosted-content.component.html
+++ b/src/app/modules/settings-v2/account/boosted-content/boosted-content.component.html
@@ -3,14 +3,14 @@
     class="m-settingsV2__headerLabel"
     i18n="@@SETTINGS__BOOSTED_CONTENT__LABEL"
   >
-    Boosted Content
+    Boost
   </div>
   <div
     class="m-settingsV2__desc"
     i18n="@@SETTINGS__BOOSTED_CONTENT__DESCRIPTION"
   >
-    Control how boosted content is displayed. Learn more about
-    <a routerLink="/boost">boosted content</a>.
+    Control how boost works across the site. Learn more about
+    <a routerLink="/boost">boost</a>.
   </div>
 </m-settingsV2__header>
 
@@ -22,7 +22,7 @@
     <div class="m-form__field--radio">
       <div class="m-form__row--label">
         <label i18n="@@BOOSTED_CONTENT__ENABLE"
-          >Enable Boosted Content
+          >View Boosted Content
           <span class="m-settingsV2__plusFeatureTag"
             >Minds+ Feature</span
           ></label
@@ -156,6 +156,55 @@
             [value]="1"
             name="boost_rating"
             formControlName="boost_rating"
+            [readonly]="inProgress"
+            class="form-control"
+          />
+          <span class="m-form__customInput__radio"></span>
+        </label>
+      </div>
+    </div>
+    <!-- ------------------------------------ -->
+    <!-- LIQUIDITY SPOT CONTENT -->
+    <!-- ------------------------------------ -->
+    <div class="m-form__field--radio" *mIfFeature="'liquidity-spot'">
+      <div class="m-form__row--label">
+        <label i18n="@@BOOSTED_CONTENT__LIQUIDITY_SPOT">Liquidity Spot</label>
+        <m-tooltip
+          ><span m-tooltip--anchor>𝒊</span>
+          <ng-container i18n="@@BOOSTED_CONTENT__LIQUIDITY_SPOT_TOOLTIP"
+            >Minds Token liquidity providers are rewarded with boosted ad space
+            relative to their % of the liquidity pool.</ng-container
+          >
+        </m-tooltip>
+      </div>
+      <div class="m-form__row--input">
+        <label
+          for="liquidity_spot_opt_in"
+          class="m-form__customInputWrapper__radio"
+        >
+          <ng-container i18n="@@COMMON__ENABLE">Opt-in</ng-container>
+          <input
+            type="radio"
+            id="liquidity_spot_opt_in"
+            [value]="0"
+            name="liquidity_spot_opt_out"
+            formControlName="liquidity_spot_opt_out"
+            class="form-control"
+            [readonly]="inProgress"
+          />
+          <span class="m-form__customInput__radio"></span>
+        </label>
+        <label
+          for="liquidity_spot_opt_out"
+          class="m-form__customInputWrapper__radio"
+        >
+          <ng-container i18n="@@COMMON__DISABLE">Opt-out</ng-container>
+          <input
+            type="radio"
+            id="liquidity_spot_opt_out"
+            [value]="1"
+            name="liquidity_spot_opt_out"
+            formControlName="liquidity_spot_opt_out"
             [readonly]="inProgress"
             class="form-control"
           />
