Minds+ latest tab

--- a/src/app/modules/discovery/tabs/tabs.component.html
+++ b/src/app/modules/discovery/tabs/tabs.component.html
@@ -1,50 +1,73 @@
-<div class="m-tabs__container" *ngIf="(isPlusPage$ | async) === false">
-  <div class="m-tabs__tab">
-    <a
-      routerLink="/discovery/overview"
-      [class.m-tabs__tab--selected]="isLinkActive('/discovery/overview')"
-      [queryParams]="{ reload: false }"
-      data-cy="discovery-tab-link-overview"
-      i18n="@@DISCOVERY_TAGS__JUST_FOR_YOU"
-      >Just for you</a
-    >
-  </div>
-  <div class="m-tabs__tab">
-    <a
-      routerLink="/discovery/tags/your"
-      routerLinkActive="m-tabs__tab--selected"
-      data-cy="discovery-tab-link-tags"
-      i18n="@@DISCOVERY_TAGS__YOUR_TAGS"
-      >Your tags</a
-    >
-  </div>
-  <div class="m-tabs__tab">
-    <a
-      routerLink="/discovery/tags/trending"
-      routerLinkActive="m-tabs__tab--selected"
-      data-cy="discovery-tab-link-trending"
-      i18n="@@DISCOVERY_TAGS__TRENDING"
-      >Trending</a
-    >
-  </div>
-  <div class="m-tabs__tab">
-    <a
-      routerLink="/discovery/memberships/feed"
-      routerLinkActive="m-tabs__tab--selected"
-      data-cy="discovery-tab-link-memberships"
-      i18n="@@DISCOVERY_TAGS__MEMBERSHIPS"
-      >Memberships</a
-    >
-  </div>
-  <div class="m-tabs__tab">
-    <a
-      routerLink="/discovery/boost/feed"
-      routerLinkActive="m-tabs__tab--selected"
-      data-cy="discovery-tab-link-boosted"
-      i18n="@@DISCOVERY_TAGS__BOOSTED"
-      >Boosted</a
-    >
-  </div>
-  <div class="m-layout__spacer"></div>
-  <m-discovery__settingsButton modalType="tags"></m-discovery__settingsButton>
+<div class="m-tabs__container">
+  <ng-container *ngIf="(isPlusPage$ | async) === false; else plusTabs">
+    <div class="m-tabs__tab">
+      <a
+        routerLink="/discovery/overview"
+        [class.m-tabs__tab--selected]="isLinkActive('/discovery/overview')"
+        [queryParams]="{ reload: false }"
+        data-cy="discovery-tab-link-overview"
+        i18n="@@DISCOVERY_TAGS__JUST_FOR_YOU"
+        >Just for you</a
+      >
+    </div>
+    <div class="m-tabs__tab">
+      <a
+        routerLink="/discovery/tags/your"
+        routerLinkActive="m-tabs__tab--selected"
+        data-cy="discovery-tab-link-tags"
+        i18n="@@DISCOVERY_TAGS__YOUR_TAGS"
+        >Your tags</a
+      >
+    </div>
+    <div class="m-tabs__tab">
+      <a
+        routerLink="/discovery/tags/trending"
+        routerLinkActive="m-tabs__tab--selected"
+        data-cy="discovery-tab-link-trending"
+        i18n="@@DISCOVERY_TAGS__TRENDING"
+        >Trending</a
+      >
+    </div>
+    <div class="m-tabs__tab">
+      <a
+        routerLink="/discovery/memberships/feed"
+        routerLinkActive="m-tabs__tab--selected"
+        data-cy="discovery-tab-link-memberships"
+        i18n="@@DISCOVERY_TAGS__MEMBERSHIPS"
+        >Memberships</a
+      >
+    </div>
+    <div class="m-tabs__tab">
+      <a
+        routerLink="/discovery/boost/feed"
+        routerLinkActive="m-tabs__tab--selected"
+        data-cy="discovery-tab-link-boosted"
+        i18n="@@DISCOVERY_TAGS__BOOSTED"
+        >Boosted</a
+      >
+    </div>
+    <div class="m-layout__spacer"></div>
+    <m-discovery__settingsButton modalType="tags"></m-discovery__settingsButton>
+  </ng-container>
+  <!-- MINDS+ TABS -------------------------------->
+  <ng-template #plusTabs>
+    <div class="m-tabs__tab">
+      <a
+        routerLink="/discovery/plus/overview"
+        routerLinkActive="m-tabs__tab--selected"
+        data-cy="discovery-tab-link-plus-overview"
+        i18n="@@DISCOVERY_TABS__OVERVIEW"
+        >Overview</a
+      >
+    </div>
+    <div class="m-tabs__tab">
+      <a
+        routerLink="/discovery/plus/latest/feed"
+        routerLinkActive="m-tabs__tab--selected"
+        data-cy="discovery-tab-link-plus-latest"
+        i18n="@@DISCOVERY_TABS__LATEST"
+        >Latest</a
+      >
+    </div>
+  </ng-template>
 </div>
